# template

coding/machine_learning/: cookiecutter.json  pyproject.toml
coding/node-react/: .dockerignore  .gitignore  Makefile
coding/node-react/deployments/: Dockerfile  compose.yml
coding/node-vue/: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile
coding/node-vue/deployments/: Dockerfile  compose.yml
coding/python-django/: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile
coding/python-django/deployments/: Dockerfile  compose.yml
coding/python-fastapi/: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml
coding/python-fastapi/deployments/: Dockerfile  compose.yml
